# tandem

./: .example.env  .gitignore  .goreleaser.yaml  ALPHA.README.md  BRAINSTORMING.md  CNAME  KaliDockerfile  LICENSE  MEDIA_GENERATION.md  PROJECT.md  README.md  SUBAGENT_ACTIVITY.md  Vagrantfile  attacker-docker.nix  flake.nix  go.mod  go.sum  install.sh  kali.nix  main.go  monorepo.sh  result  sqlc.json  swarm.schema.json  tandem.example.env
.config/: starship.toml
.github/: copilot-instructions.md  instructions.md
.github/workflows/: media-generation.yml  release.yml
.opencode/: opencode.db-shm  opencode.db-wal
.tandem/: swarm.json
agents/: README.md  agent.schema.json  example.env  pyproject.toml  reconnoiter.json  requirements.txt  run_response_chunk.json  run_response_chunk_v2.json
agents/.github/workflows/: docker-images.yml  ecr-images.yml
agents/agents/: operator.py  reconnoiter.py  sage.py  scholar.py
agents/api/routes/: agents.py  playground.py  v1_router.py
agents/scripts/: dev_setup.sh
agents/utils/: log.py  models.py
agents/workspace/: dev_resources.py  settings.py
agents/workspace/example_secrets/: dev_api_secrets.yml  prd_api_secrets.yml
internal/agent/: agent.go  agent_test.go  agenttool.go  chat.go  message.go  settings.go  stream.go
internal/agent/providers/: gemini.go  google.go  models.go  provider.go
internal/agent/tools/: tool.go
internal/app/: app.go  compositing.go
internal/bubbles/: chat.go  dialog.go  filepicker.go  splitpane.go
internal/chat/: chat.go  history.go  message.go  messages.go  stream.go
internal/cmd/: root.go
internal/cmd/auth/: command.go  list.go
internal/components/: dialog.go  filepicker.go  input.go
internal/components/messages/: agentmessage.go  toolexecutionmessage.go  usermessage.go
internal/config/: config.go  config_test.go
internal/db/: connect.go  db.go  messages.sql.go  models.go  querier.go  sessions.sql.go
internal/db/migrations/: 20250708180704_init.sql
internal/diff/: diff.go
internal/format/: format.go
internal/layout/: compositing.go
internal/logging/: logger.go  message.go  writer.go
internal/message/: content.go  message.go
internal/models/: gemini.go  groq.go  models.go  openrouter.go  vertexai.go
internal/provider/: anthropic.go  copilot.go  gemini.go  openai.go  provider.go  vertexai.go
internal/providers/: gemini.go  gemini_test.go
internal/pubsub/: broker.go  events.go
internal/session/: session.go
internal/settings/: settings.go
internal/styles/: styles.go
internal/subagent/: activity.go  activity_test.go  status_generator.go
internal/tools/: docker.go  docker_test.go  freeze.go  git_analysis.go  terminal.go  terminal_test.go  tool.go  tools.go  tools_test.go  vhs.go
internal/tui/: tui.go
internal/tui/bubbles/: filepicker.go  input.go  status.go
internal/tui/layout/: container.go  layout.go  overlay.go  split.go
internal/tui/page/: activity.go  chat.go  chat_test.go  integration_test.go  logs.go  page.go
internal/tui/styles/: demo_test.go  icons.go  markdown.go  markdown_test.go  styles.go
internal/tui/theme/: theme.go
internal/utils/: openapi-types.go  utils.go
internal/version/: version.go
tandem_tmp/: tandem.example.env
tui/: cmds.go  go.mod  go.sum  main.go  resp.md  sseClient.go  styles.go  views.go
(+26 files in other folders)
