[project]
name = "agents"
version = "0.1.0"
requires-python = ">=3.11"
readme = "README.md"
authors = [{ name = "Agno", email = "hello@agno.com" }]

dependencies = [
  "agno-aws==0.0.1",
  "agno-docker==0.0.1",
  "agno[aws]==1.2.4",
  "alembic==1.15.1",
  "altair==5.5.0",
  "annotated-types==0.7.0",
  "anyio==4.9.0",
  "attrs==25.3.0",
  "beautifulsoup4==4.13.3",
  "blinker==1.9.0",
  "boto3==1.37.19",
  "botocore==1.37.19",
  "cachetools==5.5.2",
  "certifi==2025.1.31",
  "charset-normalizer==3.4.1",
  "click==8.1.8",
  "distro==1.9.0",
  "dnspython==2.7.0",
  "docker==7.1.0",
  "docstring-parser==0.16",
  "duckduckgo-search==7.5.3",
  "email-validator==2.2.0",
  "exa-py==1.9.1",
  "fastapi-cli==0.0.7",
  "fastapi[standard]==0.115.12",
  "gitdb==4.0.12",
  "gitpython==3.1.44",
  "google-genai>=1.10.0",
  "h11==0.14.0",
  "httpcore==1.0.7",
  "httptools==0.6.4",
  "httpx==0.28.1",
  "idna==3.10",
  "iniconfig==2.1.0",
  "jinja2==3.1.6",
  "jiter==0.9.0",
  "jmespath==1.0.1",
  "jsonschema==4.23.0",
  "jsonschema-specifications==2024.10.1",
  "lxml==5.3.1",
  "mako==1.3.9",
  "markdown-it-py==3.0.0",
  "markupsafe==3.0.2",
  "mdurl==0.1.2",
  "narwhals==1.32.0",
  "numpy==2.2.4",
  "openai==1.68.2",
  "packaging==24.2",
  "pandas==2.2.3",
  "pgvector==0.4.0",
  "pillow==11.1.0",
  "pluggy==1.5.0",
  "primp==0.14.0",
  "protobuf==5.29.4",
  "psycopg-binary==3.2.6",
  "psycopg[binary]==3.2.6",
  "pyarrow==19.0.1",
  "pydantic==2.10.6",
  "pydantic-core==2.27.2",
  "pydantic-settings==2.8.1",
  "pydeck==0.9.1",
  "pygments==2.19.1",
  "pytest==8.3.5",
  "pytest-mock==3.14.0",
  "python-dateutil==2.9.0.post0",
  "python-dotenv==1.1.0",
  "python-multipart==0.0.20",
  "pytz==2025.2",
  "pyyaml==6.0.2",
  "referencing==0.36.2",
  "regex==2024.11.6",
  "requests==2.32.3",
  "rich==13.9.4",
  "rich-toolkit==0.13.2",
  "rpds-py==0.23.1",
  "s3transfer==0.11.4",
  "shellingham==1.5.4",
  "six==1.17.0",
  "smmap==5.0.2",
  "sniffio==1.3.1",
  "soupsieve==2.6",
  "sqlalchemy==2.0.39",
  "starlette==0.46.1",
  "streamlit==1.43.2",
  "tenacity==9.0.0",
  "tiktoken==0.9.0",
  "toml==0.10.2",
  "tomli==2.2.1",
  "tornado==6.4.2",
  "tqdm==4.67.1",
  "typer==0.15.2",
  "typing-extensions==4.12.2",
  "tzdata==2025.2",
  "urllib3==2.3.0",
  "uvicorn==0.34.0",
  "uvloop==0.21.0",
  "watchfiles==1.0.4",
  "websockets==15.0.1",
]

[project.optional-dependencies]
dev = [
    "mypy",
 "pytest",
 "types-requests",
 "types-beautifulsoup4",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]

# Change this value to use a different directory for the agno workspace.
# [tool.agno]
# workspace = "workspace"

[tool.ruff]
line-length = 120
exclude = [".venv*"]
[tool.ruff.lint.per-file-ignores]
# Ignore `F401` (import violations) in all `__init__.py` files
"__init__.py" = ["F401", "F403"]

[tool.mypy]
check_untyped_defs = true
no_implicit_optional = true
warn_unused_configs = true
plugins = ["pydantic.mypy"]
exclude = [".venv*"]

[[tool.mypy.overrides]]
module = ["pgvector.*", "setuptools.*", "nest_asyncio.*", "agno.*"]
ignore_missing_imports = true

[tool.uv.pip]
no-annotate = true

[tool.pytest.ini_options]
log_cli = true
